Position <i> correctly if the element is wrapped in .invalid

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -638,4 +638,6 @@ span.frame {
 
 .invalid i {
 	color: rgba(255, 255, 255, 0.5);
+	top: 10px;
+	right: 10px;
 }
